# gslidegen

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/gslidegen/: __init__.py
src/gslidegen/drive/: __init__.py  client.py
src/gslidegen/pdf/: __init__.py  utils.py
src/gslidegen/sheets/: __init__.py  client.py
src/gslidegen/tableau/: __init__.py  client.py  config.py  enums.py
